<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="login_button">Log in</string>
    <string name="register_button">Register</string>
    <string name="instruction_button">Go to instruction</string>
    <string name="welcome_title">Welcome to my shoes store!</string>
    <string name="welcome_content">Roses are red\nViolets are blue\nThis is shoes app\nI made for you.</string>
    <string name="shoe_list_button">Go to inventory</string>
    <string name="instruction_intro">Keep in mind below instructions when you use my app:</string>
    <string name="instruction_content">
        1. Install the app\n2. Get the app installed
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="floatiing_button_description">Add new shoes</string>
    <string name="logout">Log out</string>
    <string name="shoe_name">Shoe name</string>
    <string name="company">Company</string>
    <string name="shoe_size">Shoe size</string>
    <string name="shoe_description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="shoe_image">shoe image</string>
</resources>
