<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="32dp"
        tools:context=".screens.welcome.WelcomeFragment">

        <TextView
            android:id="@+id/welcome_title_text"
            style="@style/SecondaryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_title"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/welcome_content_text"
            style="@style/WelcomeContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="100dp"
            android:text="@string/welcome_content" />

        <Button
            android:id="@+id/welcome_to_instruction_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/instruction_button" />

    </LinearLayout>
</layout>