<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        tools:context=".screens.login.LoginFragment">

        <Button
            android:id="@+id/register_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/register_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_btn" />

        <EditText
            android:id="@+id/email_edit_text"
            style="@style/FormInput"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            app:layout_constraintBaseline_toBaselineOf="@+id/email_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/email_text" />

        <EditText
            android:id="@+id/password_edit_text"
            style="@style/FormInput"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintBaseline_toBaselineOf="@+id/password_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/password_text" />

        <Button
            android:id="@+id/login_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/login_button"
            app:layout_constraintBottom_toTopOf="@+id/register_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_text" />

        <TextView
            android:id="@+id/email_text"
            style="@style/FormLabel"
            android:layout_height="wrap_content"
            android:labelFor="@id/email_edit_text"
            android:text="@string/email_label"
            app:layout_constraintBottom_toTopOf="@+id/password_text"
            app:layout_constraintEnd_toStartOf="@+id/email_edit_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.39"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/password_text"
            style="@style/FormLabel"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:labelFor="@id/password_edit_text"
            android:text="@string/password_label"
            app:layout_constraintBottom_toTopOf="@+id/login_btn"
            app:layout_constraintEnd_toStartOf="@+id/password_edit_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>